# MaxEnt---VESP-Net

./: .gitignore  README.md  pyproject.toml  run_ablation.py  run_feasibility.py  train_discrete.py  train_multishell.py
benchmarks/: README.md  absolute_threshold_screening.md  baseline_comparison.md  covariance_propagation.md  force_ood_detection.md  online_force_correction.md  position_error_diagnostic.md  stm_dispersion_diagnostic.md  vespuq_conformal_validation.json  vespuq_conformal_validation.md  vespuq_risk_screening_results.md
configs/: ablation_real_lunar_lowalt_weighting.yaml  ablation_real_lunar_regularization.yaml  ablation_real_lunar_shells.yaml  maxent_pareto_real_lunar_lowl2_stress_test.yaml  maxent_real_lunar_gl0420a_multishell.yaml  real_lunar_gl0420a_lowalt_weighted.yaml  real_lunar_gl0420a_multishell_legacy.yaml  real_lunar_gl0420a_single_alpha070.yaml  uncertainty_real_lunar.yaml  uncertainty_synthetic_ood.yaml  vespuq_real_lunar.yaml
data/: lunar_grail_gl0420a_L60_residual.csv  lunar_grail_gl0420a_L60_residual.csv.metadata.json  lunar_grail_gl0420a_L60_residual.diagnostics.json  lunar_grail_gl0420a_L90_residual.csv  lunar_grail_gl0420a_L90_residual.csv.metadata.json  lunar_grail_gl0420a_L90_residual.diagnostics.json
docs/: SCIENTIFIC_CLAIMS.md  VESP_SYSTEM_HARDENING_PLAN.md  VESP_UQ_IAC_PLAN.md  VESP_UQ_LIMITATIONS.md  VESP_UQ_NEXT_STEPS.md
scripts/: analyze_512_orbits.py  analyze_5days_orbits.py  analyze_trajectory_risk.py  analyze_uq_correlation.py  benchmark_stm_dispersion.py  build_iac_pack.py  check_source_parse.py  geometry_shootout.py  (+25 more)
(+208 files in other folders)
